<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- The content of app_description is out of GPL. Those paragraph is own by author -->
	<string name="app_description"><![CDATA[
"Looking back on corporate life"













Management is a hoax.











It is evil.











People who make a big deal their "management", are just inviting trouble.

They try to keep up with everything going on around them.


For them, if there is something that is to do with their "management", they jump at it without second thought. 

If you fail in with them, lies, secrets, failure, and even crime await you.

But for them, it is just the spice of working.


And if failure is also the mark of "management", then 

is not it ironic, that a person who has failed to make project,

is also technically leading his "management".




Though I wonder if they would agree. Everything runs on their schedule.


Let me be clear. The people who enjoy their "management", will eventually fall apart.




""My Youth Romantic Comedy Is Wrong As I Expected."": (modified) quoted source. Quote from the first story
Copyright 2013 Watari Wataru, shogakukan/This Production Committee Is Wrong As I Expected.

]]></string>
	<string name="app_name">OpenRedmine</string>
	<string name="product">Product</string>
	<string name="production">Production</string>
	<string name="app_production">My Youth Redmine Is Wrong As I Expected.</string>
	<string name="message_first_time"><![CDATA[Thank you for downloading.

]]></string>
	<string name="menu_settings">Settings</string>
	<string name="menu_access_to">Access</string>
	<string name="menu_setting_label_accessurl">Redmine URL</string>
	<string name="menu_setting_edit_accessurl">http://www.redmine.org/redmine</string>
	<string name="menu_setting_label_accesstoken">Access Token</string>
	<string name="menu_setting_edit_accesstoken">0e7c82.... 40 characters</string>
	<string name="menu_setting_label_authid">ID</string>
	<string name="menu_setting_edit_authid">Basic Authcation ID</string>
	<string name="menu_setting_label_authpasswd">Password</string>
	<string name="menu_setting_edit_authpasswd">Basic Authcation Password</string>
	<string name="menu_setting_edit_name">Name</string>
	<string name="menu_setting_label_name">Label Name</string>
	<string name="menu_setting_button_save">Save</string>
	<string name="add_new_item">Add</string>
	<string name="menu_setting_check_auth">HTTP Basic Authentication</string>
	<string name="menu_setting_list_menu_title">%1$s :</string>
	<string name="menu_setting_list_menu_edit">Edit</string>
	<string name="menu_setting_list_menu_comment">Comment</string>
	<string name="menu_setting_list_menu_delete">Delete</string>
	<string name="menu_settings_loading">Retreiving item data.. </string>
	<string name="menu_settings_uploading">Posting item data.. </string>
	<string name="menu_confirm_delete_msg">Are you sure you want to delete this connection?</string>
	<string name="menu_config_delete_yes">Yes</string>
	<string name="menu_config_delete_no">No</string>
	<string name="menu_cancel">Cancel</string>
	<string name="preference_category_issue">Issues</string>
	<string name="preference_issue_get_all">Get all issues</string>
	<string name="preference_issue_description_get_all">By default, fetch UNCLOSED issues from remote. If you wish to get all issues from remote, check this option.</string>
	<string name="preference_category_appearance">Appearance</string>
	<string name="preference_category_appearance_themes">Theme</string>
	<string-array name="preference_appearance_themes_entries">
		<item >Default</item>
		<item >Dark</item>
		<item >Light</item>
		<item >Holo Light</item>
	</string-array>
	<string-array name="preference_appearance_themes_values">
		<item >default</item>
		<item >dark</item>
		<item >light</item>
		<item >hololight</item>
	</string-array>
	<string name="menu_refresh">Refresh list</string>
	<string name="menu_setting_permit_unsafe">Permit unsafe SSL connection</string>
	<string name="menu_setting_label_certkey">Certification key (Optional)</string>
	<string name="remove_cache_all">Remove all cache</string>
	<string name="format_name">%1$s</string>
	<string name="format_date" formatted="false">%tF</string>
	<string name="format_datetime" formatted="false">%1$tF %1$tH:%1$tM</string>
	<string name="format_progress">%1$d%%</string>
	<string name="ticket_created">Created</string>
	<string name="ticket_created_by">by %1$s on %2$s</string>
	<string name="ticket_author">Author</string>
	<string name="ticket_title">Title</string>
	<string name="ticket_private">Private</string>
	<string name="ticket_tracker">Tracker</string>
	<string name="ticket_status">Status</string>
	<string name="ticket_priority">Priority</string>
	<string name="ticket_progress">Progress</string>
	<string name="ticket_category">Category</string>
	<string name="ticket_version">Version</string>
	<string name="ticket_assigned_to">Assigned to</string>
	<string name="ticket_assigned">Assigned</string>
	<string name="ticket_date">Date</string>
	<string name="ticket_date_start">Start date</string>
	<string name="ticket_date_due">Due date</string>
	<string name="ticket_date_arrow">▶</string>
	<string name="ticket_date_closed">Closed date</string>
	<string name="ticket_modified">Last modified</string>
	<string name="ticket_modified_by">%2$s</string>
	<string name="ticket_time">Time</string>
	<string name="ticket_time_estimate">%.2f</string>
	<string name="ticket_date">Date</string>
	<string name="ticket_activity">Activity</string>
	<string name="ticket_issue">Issue</string>
	<string name="ticket_sort">Sort</string>
	<string name="ticket_project">Project</string>
	<string name="ticket_description">Description</string>
	<string name="ticket_detail">Detail</string>
	<string name="ticket_relations">Relations</string>
	<string name="ticket_journals">Journals</string>
	<string name="ticket_attachments">Attachments</string>

	<string name="relation_none"></string>
	<string name="relation_relates">Relate</string>
	<string name="relation_duplicates">Duplicates</string>
	<string name="relation_duplicated">Duplicated</string>
	<string name="relation_blocks">Blocks</string>
	<string name="relation_blocked">Blocked</string>
	<string name="relation_precedes">%1$d days precedes</string>
	<string name="relation_follows">%1$d days follows</string>
	<string name="relation_copied_to">Copied</string>

	<string name="ascending">ascending</string>
	<string name="descending">descending</string>
	<string name="menu_button_next">Next</string>
	<string name="menu_setting_goto_redmine">Get token</string>
	<string name="menu_setting_message_accesstoken">NOTE: To get AccessToken, press \"Get token\" button.</string>
	<string name="menu_powered_by_icon">icons by</string>
	<string name="menu_add_timeentry">Record Time</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="menu_filter">Filter</string>
	<string name="filter_none">None</string>
	<string name="edit">Edit</string>
	<string name="changes_from_to">Change <b>%1$s</b> from %2$s to %3$s</string>
	<string name="changes_set_to">Set <b>%1$s</b> to %3$s</string>
	<string name="changes_remove_from">Remove <s>%2$s</s> from <b>%1$s</b></string>
	<string name="remote_401">Authentication is required. Check your role or API key.</string>
	<string name="remote_403">Something wrong with connection settings.</string>
	<string name="remote_404">Something with wrong with connection. Try later.</string>
	<string name="remote_407">Proxy connection is not supported yet</string>
	<string name="remote_4xx">Something wrong with connection. Please check access by browser.</string>
	<string name="remote_5xx">Something wrong with server. Please check access by browser.</string>
	<string name="remote_600">A problem was occurred on this application</string>
	<string name="remote_saved">Has been saved to remote</string>
	<string name="has_been_saved">Has been saved</string>
	<string name="input_error_invalid_decimal">Input valid number.</string>
	<string name="input_error_select">Select %1$s</string>
	<string name="warning_experimental_feature">This is EXPERIMANTAL. This feature may affect bad to your redmine.</string>
	<string name="size">Size</string>
	<string name="progress">Progress</string>
	<string name="download">Download</string>

</resources>