<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/menu_add_timeentry"
		android:title="@string/menu_add_timeentry"
		android:showAsAction="ifRoom"
		android:icon="@drawable/ic_action_add_time"
		android:numericShortcut="7"
		android:alphabeticShortcut="t"/>
	<item android:id="@+id/menu_edit"
	    android:title="@string/edit"
	    android:showAsAction="ifRoom"
	    android:icon="@android:drawable/ic_menu_edit"
        android:numericShortcut="1"
        android:alphabeticShortcut="e" />
    <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_refresh"
        android:numericShortcut="5"
        android:alphabeticShortcut="r"/>
</menu>