<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/menu_access_addnew"
	    android:title="@string/add_new_item"
	    android:showAsAction="ifRoom"
	    android:icon="@android:drawable/ic_menu_add"
        android:numericShortcut="1"
        android:alphabeticShortcut="a" />
    <item android:id="@+id/menu_issues_filter"
        android:title="@string/menu_filter"
	    android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_filter"
        android:numericShortcut="3"
         android:alphabeticShortcut="f" />
    <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"
        android:numericShortcut="5"
        android:alphabeticShortcut="r"/>
</menu>