<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_save"
        android:title="@string/menu_setting_button_save"
	    android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_save"
        android:numericShortcut="1"
         android:alphabeticShortcut="s" />
    <item android:id="@+id/menu_cancel"
        android:title="@string/menu_cancel"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:numericShortcut="9"
        android:alphabeticShortcut="c"/>
    <item android:id="@+id/menu_delete"
        android:title="@string/menu_setting_list_menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:numericShortcut="7"
        android:alphabeticShortcut="d"/>
</menu>