<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dip" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/textPrivate"
	        style="@android:style/Widget.CompoundButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:background="#cc0000"
	        android:text="@string/ticket_private" />

	    <TextView
	        android:id="@+id/textTracker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_tracker"
	        android:textAppearance="?android:attr/textAppearanceMedium" />


	    <TextView
	        android:id="@+id/textAuthor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="@string/ticket_created_by" />
	</LinearLayout>




	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="3dip"
	    android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_status" />

	    <TextView
	        android:id="@+id/textStatus"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="@string/ticket_progress"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textPriority"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="@string/ticket_priority"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="3dip"
	    android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_assigned_to" />

	    <TextView
	        android:id="@+id/textAssignedTo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="@string/ticket_assigned_to"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="3dip"
	    android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_category" />

	    <TextView
	        android:id="@+id/textCategory"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="@string/ticket_category"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dip"
	    android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_progress" />


	    <TextView
	        android:id="@+id/textProgress"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="30%"
	        tools:ignore="HardcodedText" />

	    <ProgressBar
	        android:id="@+id/progressissue"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:max="100"
	        android:progress="30" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dip"
	    android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_date" />


	    <TextView
	        android:id="@+id/textDateFrom"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="2012-06-20"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        tools:ignore="HardcodedText" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_date_arrow" />


	    <TextView
	        android:id="@+id/textDateTo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="2012-06-30"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        tools:ignore="HardcodedText" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dip"
	    android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_version" />

	    <TextView
	        android:id="@+id/textVersion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="@string/ticket_version"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/linearTimeEntry"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dip"
	    android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_time" />
	    <TextView
	        android:id="@+id/textTimeEntry"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="@string/ticket_time_estimate"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:layout_marginRight="3dip"
	        android:text="/"
	        tools:ignore="HardcodedText" />

	    <TextView
	        android:id="@+id/textEstimate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="@string/ticket_time_estimate"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dip"
	    android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ticket_modified" />

	    <TextView
	        android:id="@+id/textModified"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dip"
	        android:text="@string/ticket_modified_by"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<ProgressBar
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp" />

	<WebView
	    android:id="@+id/webView"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />

</LinearLayout>