<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/jp.redmine.redmineclient"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/ticket_title" />

	<com.andreabaccega.widget.FormEditText
	    android:id="@+id/textTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:text="@string/ticket_title"
	    app:emptyAllowed="false" />

	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ticket_status" />

	        <Spinner
	            android:id="@+id/spinnerStatus"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />

	    </TableRow>

	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ticket_category" />

	        <Spinner
	            android:id="@+id/spinnerCategory"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />

	    </TableRow>

	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ticket_priority" />

	        <Spinner
	            android:id="@+id/spinnerPriority"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />

	    </TableRow>

	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ticket_version" />

	        <Spinner
	            android:id="@+id/spinnerVersion"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />

	    </TableRow>

	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ticket_assigned_to" />

	        <Spinner
	            android:id="@+id/spinnerAssigned"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />

	    </TableRow>

	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/ticket_progress" />

		    <ProgressBar
		        android:id="@+id/progressissue"
		        style="?android:attr/progressBarStyleHorizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_marginLeft="3dip"
		        android:max="100"
		        android:progress="30" />

	    </TableRow>

	</TableLayout>

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/ticket_description" />

	<com.andreabaccega.widget.FormEditText
	    android:id="@+id/textDescription"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:text="@string/ticket_description"
	    app:emptyAllowed="true" >

	</com.andreabaccega.widget.FormEditText>

</LinearLayout>